--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -153,14 +153,14 @@ body {
 
 	// Light/Dark mode hover background colors for list rows
 	.js-set-list-row-hover-background-color-dark-mode-false {
-		&:hover,
-		:active {
+		// Only hover since active causes td to cover border
+		&:hover {
 			background-color: v.$mode-list-row-hover-background-color-light;
 		}
 	}
 	.js-set-list-row-hover-background-color-dark-mode-true {
-		&:hover,
-		:active {
+		// Only hover since active causes td to cover border
+		&:hover {
 			background-color: v.$mode-list-row-hover-background-color-dark;
 		}
 	}
@@ -223,65 +223,65 @@ body {
 		background-color: v.$mode-create-item-sidebar-background-color-dark;
 	}
 
-	// Light/Dark mode border, background, and text color for for CreateItemSidebar base form-input
-	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-focus-box-shadow-dark-mode-false {
-		border-color: v.$mode-create-item-form-input-border-color-light;
-		background-color: v.$mode-create-item-form-input-background-color-light;
+	// Light/Dark mode border, background, text color, and focus box shadow for CreateItemSidebar form-input
+	.js-set-create-item-sidebar-form-input-border-background-text-color-focus-box-shadow-dark-mode-false {
+		border-color: v.$mode-create-item-sidebar-form-input-border-color-light;
+		background-color: v.$mode-create-item-sidebar-form-input-background-color-light;
 		color: v.$mode-home-text-color-light;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-light;
 		}
 	}
-	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-focus-box-shadow-dark-mode-true {
-		border-color: v.$mode-create-item-form-input-border-color-dark;
-		background-color: v.$mode-create-item-form-input-background-color-dark;
+	.js-set-create-item-sidebar-form-input-border-background-text-color-focus-box-shadow-dark-mode-true {
+		border-color: v.$mode-create-item-sidebar-form-input-border-color-dark;
+		background-color: v.$mode-create-item-sidebar-form-input-background-color-dark;
 		color: v.$mode-home-text-color-dark;
 
 		&:focus {
-			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-dark;
-			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-dark;
-			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-dark;
+			box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-create-item-sidebar-form-input-focus-box-shadow-color-dark;
 		}
 	}
 
-	// Light/Dark mode CreateItemSidebar disabled base label
+	// Light/Dark mode CreateItemSidebar disabled form-label
 	.js-set-create-item-sidebar-diabled-label-dark-mode-false {
-		color: v.$mode-create-item-form-input-disabled-text-color-light;
+		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-light;
 		pointer-events: none;
 	}
 	.js-set-create-item-sidebar-diabled-label-dark-mode-true {
-		color: v.$mode-create-item-form-input-disabled-text-color-dark;
+		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
-	// Light/Dark mode CreateItemSidebar disabled base input date
+	// Light/Dark mode CreateItemSidebar disabled form-input type date
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-false {
-		background-color: v.$mode-create-item-form-input-disabled-background-color-light;
-		color: v.$mode-create-item-form-input-disabled-text-color-dark;
+		background-color: v.$mode-create-item-sidebar-form-input-disabled-background-color-light;
+		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
 		pointer-events: none;
 	}
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-true {
-		background-color: v.$mode-create-item-form-input-disabled-background-color-dark;
-		color: v.$mode-create-item-form-input-disabled-text-color-dark;
+		background-color: v.$mode-create-item-sidebar-form-input-disabled-background-color-dark;
+		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
-	// Light/Dark mode focus box shadow for CreateItemSidebar submit button
+	// Light/Dark mode focus box shadow for CreateItemSidebar form-submit
 	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-false {
 		&:focus {
-			box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+			box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
 		}
 	}
 	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-true {
 		&:focus {
-			box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-dark;
-			-moz-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-dark;
-			-webkit-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-dark;
+			box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-dark;
 		}
 	}
 
@@ -372,6 +372,104 @@ body {
 		&:hover,
 		:active {
 			background-color: v.$mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark;
+		}
+	}
+
+	// Light/Dark mode border, background, text color, and focus box shadow for ItemViewEditItemInfo form-input
+	.js-set-item-view-edit-item-info-form-input-border-background-text-color-focus-box-shadow-dark-mode-false {
+		border-color: v.$mode-item-view-edit-item-info-form-input-border-color-light;
+		background-color: v.$mode-item-view-edit-item-info-form-input-background-color-light;
+		color: v.$mode-home-text-color-light;
+
+		&:focus {
+			box-shadow: v.$mode-item-view-edit-item-info-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-item-view-edit-item-info-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-item-view-edit-item-info-form-input-focus-box-shadow-color-light;
+		}
+	}
+	.js-set-item-view-edit-item-info-form-input-border-background-text-color-focus-box-shadow-dark-mode-true {
+		border-color: v.$mode-item-view-edit-item-info-form-input-border-color-dark;
+		background-color: v.$mode-item-view-edit-item-info-form-input-background-color-dark;
+		color: v.$mode-home-text-color-dark;
+
+		&:focus {
+			box-shadow: v.$mode-item-view-edit-item-info-form-input-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-item-view-edit-item-info-form-input-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-item-view-edit-item-info-form-input-focus-box-shadow-color-dark;
+		}
+	}
+
+	// Light/Dark mode border, background, text color, and focus box shadow (top, bottom, left) for ItemViewEditItemInfo form-input for name
+	.js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-false {
+		border-color: v.$mode-item-view-edit-item-info-form-input-border-color-light;
+		background-color: v.$mode-item-view-edit-item-info-form-input-background-color-light;
+		color: v.$mode-home-text-color-light;
+
+		&:focus {
+			box-shadow: v.$mode-item-view-edit-item-info-form-input-top-bottom-left-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-item-view-edit-item-info-form-input-top-bottom-left-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-item-view-edit-item-info-form-input-top-bottom-left-focus-box-shadow-color-light;
+		}
+	}
+	.js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-true {
+		border-color: v.$mode-item-view-edit-item-info-form-input-border-color-dark;
+		background-color: v.$mode-item-view-edit-item-info-form-input-background-color-dark;
+		color: v.$mode-home-text-color-dark;
+
+		&:focus {
+			box-shadow: v.$mode-item-view-edit-item-info-form-input-top-bottom-left-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-item-view-edit-item-info-form-input-top-bottom-left-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-item-view-edit-item-info-form-input-top-bottom-left-focus-box-shadow-color-dark;
+		}
+	}
+
+	// Light/Dark mode box shadow (top, bottom, left) for ItemViewEditItemInfo name char-count-container
+	.js-set-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-dark-mode-false {
+		box-shadow: v.$mode-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-color-light;
+		-moz-box-shadow: v.$mode-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-color-light;
+		-webkit-box-shadow: v.$mode-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-color-light;
+	}
+	.js-set-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-dark-mode-true {
+		box-shadow: v.$mode-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-color-dark;
+		-moz-box-shadow: v.$mode-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-color-dark;
+		-webkit-box-shadow: v.$mode-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-color-dark;
+	}
+
+	// Light/Dark mode ItemViewEditItemInfo disabled form-label
+	.js-set-item-view-edit-item-info-diabled-label-dark-mode-false {
+		color: v.$mode-item-view-edit-item-info-form-input-disabled-text-color-light;
+		pointer-events: none;
+	}
+	.js-set-item-view-edit-item-info-diabled-label-dark-mode-true {
+		color: v.$mode-item-view-edit-item-info-form-input-disabled-text-color-dark;
+		pointer-events: none;
+	}
+
+	// Light/Dark mode ItemViewEditItemInfo disabled form-input type date
+	.js-set-item-view-edit-item-info-diabled-input-date-dark-mode-false {
+		background-color: v.$mode-item-view-edit-item-info-form-input-disabled-background-color-light;
+		color: v.$mode-item-view-edit-item-info-form-input-disabled-text-color-dark;
+		pointer-events: none;
+	}
+	.js-set-item-view-edit-item-info-diabled-input-date-dark-mode-true {
+		background-color: v.$mode-item-view-edit-item-info-form-input-disabled-background-color-dark;
+		color: v.$mode-item-view-edit-item-info-form-input-disabled-text-color-dark;
+		pointer-events: none;
+	}
+
+	// Light/Dark mode focus box shadow for ItemViewEditItemInfo form-submit
+	.js-set-item-view-edit-item-info-submit-button-focus-box-shadow-dark-mode-false {
+		&:focus {
+			box-shadow: v.$mode-item-view-edit-item-info-form-submit-button-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-item-view-edit-item-info-form-submit-button-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-item-view-edit-item-info-form-submit-button-focus-box-shadow-color-light;
+		}
+	}
+	.js-set-item-view-edit-item-info-submit-button-focus-box-shadow-dark-mode-true {
+		&:focus {
+			box-shadow: v.$mode-item-view-edit-item-info-form-submit-button-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-item-view-edit-item-info-form-submit-button-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-item-view-edit-item-info-form-submit-button-focus-box-shadow-color-dark;
 		}
 	}
 
